Change feeamount column from money to double in accountfeeentity and now it is build using constructor only.
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@10537 a8845c50-7012-0410-95d3-8e1449b9b1e4